# the_Peeling

./: Cargo.toml  opt.toml
assets/models/: spike_ling_0.glb  test_runner.glb
assets/models/deco/: stalagmite_base.glb
assets/models/shapes/: simple_sphere.glb
assets/models/weapons/: red_large_sword.glb
src/: asset_loader.rs  camera.rs  flat_mesh.rs  inputs.rs  main.rs  spawner.rs  states.rs  utils.rs  world.rs
