[package]
name = "the_peeling"
version = "0.1.0"
edition = "2021"
authors = ["Kam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_rapier3d = { version = "0.25.0", features = [ "simd-stable", "debug-render-3d" ] }
rand = "0.8.5"
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.69"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.release]
lto = true
opt-level = 'z'
debug = 0
